modify my git site

--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -108,7 +108,7 @@
       <div class="container">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           | You can also vist my Music Site <a href="http://www.adienzhang.tap.cn" target="_blank" title="You Zhang From SHU">Adien Zhang</a>
-          and Git Site <a href="http://github.com/guitar2009king" target="_blank">ZY Git</a>
+          and Git Site <a href="http://github.com/youzhang" target="_blank">ZY Git</a>
 		  or contact me <a href="mailto:youzhang@shu.edu.cn" target="_blank">YouZhang@shu.edu.cn</a>
         </p>
       </div>
